# EcoSLIM

./: .gitignore  CMakeLists.txt  EcoSLIM_CUDA_MPI.cuf  Makefile  README.md  ecoslim_create_subgrid.f90  ecoslim_device_utility.cuf  ecoslim_parallel_io.f90  ecoslim_particles_loop.cuf
Example/: slimin.txt  sub_info.txt
src/: CMakeLists.txt  EcoSLIM_CUDA_MPI.cuf  ecoslim_particles_loop.cuf
testing/: run_test.sh
